Create a canvas and add a field and some sheep to it

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,18 @@
 
   <head>
     <title>Randomjunk</title>
-
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="js/site.js"></script>
   </head>
 
   <body>
+    <div style="display:none;">
+      <img id="landscape" src="images/landscape.svg">
+      <img id="sheep" src="images/sheep.svg">
+    </div>
 
+    <canvas id="sheep_canvas" style="position: fixed; top: 0; left: 0;">
+    </canvas>
 
   </body>
 
