Logo and a little code tidying

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,10 @@
       <img id="landscape" src="images/landscape.svg">
       <img id="sheep" src="images/sheep.svg">
     </div>
-
     <canvas id="sheep_canvas" style="position: fixed; top: 0; left: 0;">
     </canvas>
+
+    <div style="position: absolute; top: 20px; left: 20px;"><img src="images/randomjunk.svg"></div>
 
   </body>
 
