--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,20 @@
   <body>
     <div style="display:none;">
       <img id="landscape" src="images/landscape.svg">
-      <img id="sheep" src="images/sheep.svg">
+      <img id="sheep_f1" src="images/sheep.svg">
+      <img id="sheep_f2" src="images/sheep_f2.svg">
+      <img id="sheep_f3" src="images/sheep_f3.svg">
+      <img id="sheep_f4" src="images/sheep_f4.svg">
+      <img id="sheep_f5" src="images/sheep_f5.svg">
+      <img id="sheep_f6" src="images/sheep_f6.svg">
+      <img id="sheep_f7" src="images/sheep_f7.svg">
+      <img id="sheep_lie_f1" src="images/sheep_lie_f1.svg">
+      <img id="sheep_lie_f2" src="images/sheep_lie_f2.svg">
+      <img id="sheep_lie_f3" src="images/sheep_lie_f3.svg">
+      <img id="sheep_lie_f4" src="images/sheep_lie_f4.svg">
+      <img id="sheep_sleep_f1" src="images/sheep_sleep_f1.svg">
+      <img id="sheep_sleep_f2" src="images/sheep_sleep_f2.svg">
+      <img id="sheep_sleep_f3" src="images/sheep_sleep_f3.svg">
     </div>
     <canvas id="sheep_canvas" style="position: fixed; top: 0; left: 0;">
     </canvas>
